--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -96,3 +96,13 @@
 .list__item:last-child {
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
+
+.icon-ionic {
+    background: url('../icons/ionic.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    height: 18px;
+    width: 18px;
+    vertical-align: middle;
+}
